changes I made from fanbase

--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,12 @@
 /* There is more in  */
+
+body{
+    background-color: gray;
+    height: 600px;
+    width: 600px;
+    display: flex;
+}
+
+h1{
+    color:blue;
+}
